infra/deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: agents-db-mcp
  namespace: agents-db-mcp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: agents-db-mcp
  template:
    metadata:
      labels:
        app: agents-db-mcp
    spec:
      containers:
        - name: agents-db-mcp
          image: ghcr.io/commonrservices/postgresql-mcp-python:sha256-a82054720211b60899516d0dd740a583e8d1aa9103669131f0cac7dc795cade1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
